--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Takerhat</title>
-
+<meta http-equiv="refresh" content="30">
 
 
 <!--Facebook  -->
@@ -22,6 +22,14 @@
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
+
+body{
+    height: 80%;
+}
+
 .primary
 {
     max-width: 1024px;
@@ -29,6 +37,10 @@
     min-height: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 5px;
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .dynamic-shift
 {
@@ -148,6 +160,7 @@
 .welcome
 {
     margin: 20px 0px;
+
 }
 .welcome-text
 {
