--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Takerhat</title>
-<meta http-equiv="refresh" content="30">
 
 
 <!--Facebook  -->
@@ -13,7 +12,7 @@
 <meta property="og:type"               content="website" />
 <meta property="og:title"              content="Takerhat.com Ramadan Timetable" />
 <meta property="og:description"        content="Get accurate dynamic Ramadan timetable for Takerhat and Surroundings." />
-<meta property="og:image"              content="https://takerhat.com/share_img.png" />
+<meta property="og:image"              content="https://takerhat.com/share_img_2.png" />
 <meta property="fb:app_id"               content="2865936726832582" />
 
 <style>
