--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <meta property="og:url"                content="https://takerhat.com" />
 <meta property="og:type"               content="website" />
-<meta property="og:title"              content="Takerhat.com" />
-<meta property="og:description"        content="Eid Mubarak!" />
+<meta property="og:title"              content="Eid Mubarak!" />
+<meta property="og:description"        content="Eid Mubarak to you all from takerhat.com" />
 <meta property="og:image"              content="https://takerhat.com/share_img_2.png" />
 <meta property="fb:app_id"               content="2865936726832582" />
 
