--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url"                content="https://takerhat.com" />
 <meta property="og:type"               content="website" />
 <meta property="og:title"              content="Eid Mubarak!" />
-<meta property="og:description"        content="Eid Mubarak to you all from takerhat.com" />
+<meta property="og:description"        content="May Allah (SWT) bless us with full of Happiness in every EID!" />
 <meta property="og:image"              content="https://takerhat.com/share_img_2.png" />
 <meta property="fb:app_id"               content="2865936726832582" />
 
